<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_lg"
        android:paddingEnd="@dimen/spacing_lg"
        android:paddingTop="@dimen/spacing_sm"
        android:paddingBottom="@dimen/spacing_sm">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_server_url_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_server_url_label"
        app:boxBackgroundMode="outline">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/dialog_server_url_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_server_token_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:hint="@string/dialog_server_token_label"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:endIconContentDescription="@string/dialog_server_token_reveal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_server_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/dialog_server_token_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>